--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,6 +21,23 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Install Qt
+      uses: jurplel/install-qt-action@v2
+      with:
+        version: '6.1.2'
+        host: 'windows'
+        target: 'desktop'
+        arch: 'win64_msvc2019_64'
+        install-deps: 'true'
+        cached: 'false'
+        setup-python: 'true'
+        tools: 'tools_ifw,4.0.0,qt.tools.ifw.40'
+        set-env: 'true'
+        tools-only: 'false'
+        aqtversion: '==1.2.5'
+        py7zrversion: '==0.16.1'
+        extra: '--external 7z'
+
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
