--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -47,4 +47,7 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
+    - name: CPack
+      run: cpack -V
+
       
