--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -48,8 +48,9 @@ jobs:
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
     - name: CPack
-      run: dir
-      run: type CPackConfig.cmake
-      run: cpack -V
+      run: |
+        dir
+        type CPackConfig.cmake
+        cpack -V
 
       
