--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DQT_INSTALLATION_PREFIX=D:/a/simple_random_string_generator/Qt/6.1.2/msvc2019_64 -DCPACK_IFW_ROOT=D:/a/simple_random_string_generator/Qt/Tools/QtInstallerFramework/4.0
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DQT_INSTALLATION_PREFIX=D:/a/simple_random_string_generator/Qt/6.1.2/msvc2019_64 
 
     - name: Build
       # Build your program with the given configuration
@@ -52,6 +52,7 @@ jobs:
       run: |
         dir
         type CPackConfig.cmake
+        echo "{D:/a/simple_random_string_generator/Qt/Tools/QtInstallerFramework/4.0/bin}" >> $GITHUB_PATH
         cpack -V
 
       
