--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -39,7 +39,8 @@ jobs:
     - name: CPack
       working-directory: build
       run: |
-        echo "${{GITHUB_PATH}}"
-        dir ${{github.workspace}}/Qt/Tools/QtInstallerFramework/4.1/bin
+        echo "$PATH"
+        dir "${{github.workspace}}/Qt/Tools/QtInstallerFramework/4.1/bin"
         echo "${{github.workspace}}/Qt/Tools/QtInstallerFramework/4.1/bin" >> $GITHUB_PATH
+        echo "$PATH"
         cpack -V
