--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -37,11 +37,8 @@ jobs:
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
     - name: CPack
-      shell: cmd
       working-directory: build
       run: |
-        echo "$PATH"
-        dir "${{github.workspace}}/Qt/Tools/QtInstallerFramework/4.1/bin"
-        echo "${{github.workspace}}/Qt/Tools/QtInstallerFramework/4.1/bin" >> $GITHUB_PATH
-        echo "$PATH"
+        # dir "${{github.workspace}}/Qt/Tools/QtInstallerFramework/4.1/bin"
+        echo "${{github.workspace}}/Qt/Tools/QtInstallerFramework/4.1/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
         cpack -V
