--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -39,6 +39,6 @@ jobs:
     - name: CPack
       working-directory: build
       run: |
-        # dir "${{github.workspace}}/Qt/Tools/QtInstallerFramework/4.1/bin"
-        echo "${{github.workspace}}/Qt/Tools/QtInstallerFramework/4.1/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+        dir "${{github.workspace}}/Qt/Tools/QtInstallerFramework/4.1/bin"
+        echo "::add-path::${{github.workspace}}/Qt/Tools/QtInstallerFramework/4.1/bin"
         cpack -V
