--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -40,5 +40,5 @@ jobs:
       working-directory: build
       run: |
         dir "${{github.workspace}}/Qt/Tools/QtInstallerFramework/4.1/bin"
-        echo "::add-path::${{github.workspace}}/Qt/Tools/QtInstallerFramework/4.1/bin"
+        echo "${{ github.workspace }}/Qt/Tools/QtInstallerFramework/4.1/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
         cpack -V
