--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -37,6 +37,7 @@ jobs:
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
     - name: CPack
-      working-directory: build
       run: |
-        cpack -V
+        mkdir package
+        cd package
+        cpack --config ../CPackConfig.cmake -V
