--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -37,10 +37,13 @@ jobs:
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
     - name: CPack
+      working-directory: package
       run: |
-        mkdir package
-        cd package
+        dir ..
         cpack --config ../CPackConfig.cmake -V
+        mkdir package2
+        cd package2
+        dir ..\..
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
