--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,5 +1,9 @@
 name: CMake Build
 
+# curl -L -O https://download.qt.io/official_releases/online_installers/qt-online-installer-windows-x64-online.exe
+# qt6.9.1-msvc2022-full-dbg
+# qt-online-installer-windows-x64-online.exe --root C:\code\Qt --accept-licenses --accept-obligations --default-answer --confirm-command install qt6.9.1-msvc2022-full-dbg
+
 on:
   push:
     branches: [main]
@@ -9,6 +13,7 @@ on:
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
+  Qt6_ROOT: ${{ github.workspace }}/Qt/6.9.1/msvc2022_64
 
 jobs:
   build:
@@ -23,27 +28,31 @@ jobs:
 
       - name: Install Qt
         run: |
-          pip install aqtinstall
-          aqt install-qt --outputdir ${{github.workspace}}/Qt windows desktop 6.1.2 win64_msvc2019_64
-          aqt install-tool --outputdir ${{github.workspace}}/Qt windows desktop tools_ifw qt.tools.ifw.44
+          curl -L -O https://download.qt.io/official_releases/online_installers/qt-online-installer-windows-x64-online.exe
+          qt-online-installer-windows-x64-online.exe --root ${{ github.workspace }}/Qt --accept-licenses --accept-obligations --default-answer --confirm-command install qt6.9.1-msvc2022-full-dbg
+
+        # pip install aqtinstall
+        # aqt install-qt --outputdir ${{ github.workspace }}/Qt windows desktop 6.1.2 win64_msvc2019_64
+        # aqt install-tool --outputdir ${{ github.workspace }}/Qt windows desktop tools_ifw qt.tools.ifw.44
 
       - name: Configure CMake
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
         # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DQT_INSTALLATION_PREFIX=${{github.workspace}}/Qt/6.1.2/msvc2019_64 -DCPACK_IFW_ROOT=${{github.workspace}}/Qt/Tools/QtInstallerFramework/4.4
+        run: cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
+          # cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -DQT_INSTALLATION_PREFIX=${{ github.workspace }}/Qt/6.1.2/msvc2019_64 -DCPACK_IFW_ROOT=${{github.workspace}}/Qt/Tools/QtInstallerFramework/4.4
 
       - name: Build
         # Build your program with the given configuration
-        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+        run: cmake --build ${{ github.workspace }}/build --config ${{ env.BUILD_TYPE }}
 
       - name: Prepare Directory
         run: mkdir package
 
-      - name: CPack
-        working-directory: package
-        run: |
-          #dir ..\build
-          cpack --config ../build/CPackConfig.cmake -V
+    #  - name: CPack
+    #    working-directory: package
+    #    run: |
+    #      #dir ..\build
+    #      cpack --config ../build/CPackConfig.cmake -V
 
     #- name: Upload Artifact
     #  uses: actions/upload-artifact@v2
